--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.json-simple-1.1.jar=/home/vikram/.eclipse-workspace
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\badbo\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/home/vikram/.netbeans/8.2/build.properties
